--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="alternate" type="application/rss+xml" href="https://Juelin-Liu.github.io/index.xml"
-          title="Juelin Liu"/>
+<!--    <link rel="alternate" type="application/rss+xml" href="https://Juelin-Liu.github.io/index.xml" title="Juelin Liu"/>-->
     <meta property="og:title" content="Juelin Liu"/>
     <meta property="og:description" content=""/>
     <meta property="og:type" content="website"/>
@@ -27,11 +26,11 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:500,100,300"
           rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" media="screen" href=css/normalize.css/>
-    <link rel="stylesheet" type="text/css" media="screen" href=css/main.css/>
+    <link rel="stylesheet" type="text/css" media="screen" href="https://juelin-liu.github.io/css/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://juelin-liu.github.io/css/normalize.css">
 
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src=js/main.js></script>
+<!--    <script src=js/main.js></script>-->
 </head>
 
 <body>
@@ -41,7 +40,7 @@
     <div class="container content">
         <div class="bio" style="width: 100%;">
             <p style="line-height:1.6;">
-                <img style="float: left; padding-right: 40px;" src=img/juelin-mid.jpg width="200"
+                <img style="float: left; padding-right: 40px;" src="img/juelin-mid.jpg" width="200"
                      height="auto" alt="Juelin Liu's Picture at NEDB">
                 <a id="author-name" class="alignable pull-left">Juelin Liu</a><br>
                 Ph.D. Student <br>
