--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="introduction">
             <h2 id="about-me">About Me</h2>
                 <p>I am a second-year Ph.D. student at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>, supervised by Professor <a href="https://www.cics.umass.edu/people/serafini-marco">Marco Serafini</a>. </p>
-                <p>I am studying for my PhD at UMass Amherst. My interested research areas include Databases Systems, Distributed Systems and ML Systems. I currently work on Recommendation Systems and Machine Learning systems for Graph Neural Networks.</p>
+                <p>My research areas include database systems, Distributed Systems, and ML Systems. I currently work on Recommendation Systems and Machine Learning systems for Graph Neural Networks.</p>
             <br>
         </div>
 
