--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="introduction">
             <h2 id="about-me">About Me</h2>
                 <p>I am a second-year Ph.D. student at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>, supervised by Professor <a href="https://www.cics.umass.edu/people/serafini-marco">Marco Serafini</a>. </p>
-                <p>My research areas include database systems, Distributed Systems, and ML Systems. I currently work on Recommendation Systems and Machine Learning systems for Graph Neural Networks.</p>
+                <p>My research areas include Database Systems and Distributed ML Systems. I currently work on Vector Search and Systems for Graph Neural Networks.</p>
             <br>
         </div>
 
@@ -68,7 +68,7 @@
             <h2 id="publication">Publications</h2>
             <ul class="publication-list">
                 <li>
-                    <span>GraphMini: Accelerate Graph Pattern Matching Using Auxiliary Graphs</span>
+                    <a href="https://arxiv.org/abs/2403.01050" class="publications">GraphMini: Accelerate Graph Pattern Matching Using Auxiliary Graphs</a>
                     <span class="collaborators"> <strong>Juelin Liu</strong>, Sandeep Polisetty, Hui Guan, Marco Serafini</span>
                     <span>Inproceedings of International Conference on Parallel Architectures and Compilation Techniques (PACT) 2023. </span>
                 </li>
