--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <p>University of Massachusetts Amherst (2018 - 2021)</p>
+                    <p>UMass Amherst (2022 - Current)</p>
+                    <p>PhD in Computer Science</p>
+                </li>
+                <li>
+                    <p>UMass Amherst (2018 - 2021)</p>
                     <p>Bachelor of Science in Computer Science</p>
                 </li>
             </ul>
